--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/assets/fonts/font-awesome.css"></link>
+    <script src="/assets/js/waves.min.js"></script>
+    <link rel="stylesheet" href="/assets/css/waves.min.css"></link>
   </head>
   <body>
     <div id="root"></div>
